--- a/TextrudeInteractive/Resources/monaco.html
+++ b/TextrudeInteractive/Resources/monaco.html
@@ -2,23 +2,42 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+
+    <style type="text/css">
+        html,
+        body {
+            height: 100%;
+            margin: 0;
+        }
+
+        #container {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
-
-    <div id="container" style="width:600px;height:600px"></div>
+    <div id="container" />
 
     <script src="vs/loader.js"></script>
     <script>
         require.config({ paths: { 'vs': 'vs' } });
         require(['vs/editor/editor.main'], function () {
-            var editor = monaco.editor.create(document.getElementById('container'), {
-                value: [
-                    'function x() {',
-                    '\tconsole.log("Hello world!");',
-                    '}'
-                ].join('\n'),
-                language: 'javascript'
+            const container = document.getElementById('container');
+            const editor = monaco.editor.create(container, {
+                lineNumbers: "on",
+                readOnly: true,
+                theme: "vs-dark",
             });
+
+            window.addEventListener('resize', (event) => {
+                editor.layout();
+            });
+
+            window.chrome.webview.addEventListener('message', (event) => {
+                const newModel = monaco.editor.createModel(event.data.text, event.data.language);
+                editor.setModel(newModel);
+            })
         });
     </script>
 </body>
