--- a/TextrudeInteractive/Resources/monaco.html
+++ b/TextrudeInteractive/Resources/monaco.html
@@ -36,8 +36,13 @@
             });
 
             window.chrome.webview.addEventListener('message', (event) => {
-                const newModel = monaco.editor.createModel(event.data.text, event.data.language);
-                editor.setModel(newModel);
+                if (event.data.type === "UpdateText") {
+                    const newModel = monaco.editor.createModel(event.data.text, event.data.language);
+                    editor.setModel(newModel);
+                } else if (event.data.type === "UpdateLanguage") {
+                    const model = editor.getModel();
+                    monaco.editor.setModelLanguage(model, event.data.language);
+                }
             })
         });
     </script>
