Allow whitespace to be made visible

--- a/TextrudeInteractive/Resources/monaco.html
+++ b/TextrudeInteractive/Resources/monaco.html
@@ -77,6 +77,10 @@
                         editor.updateOptions({
                             wordWrap: event.data.Enabled
                         });
+                    } else if (event.data.Type === "RenderWhitespace") {
+                        editor.updateOptions({
+                            renderWhitespace: event.data.WhitespaceType
+                        });
                     }
 
                 });
