--- a/TextrudeInteractive/Resources/monaco.html
+++ b/TextrudeInteractive/Resources/monaco.html
@@ -35,6 +35,27 @@
             });
             const model = editor.getModel();
             var settingText = false;
+            var completions = {
+                helpers: [
+                    {
+                        name: "humanizr.camelcase",
+                        description: "CameCasing"
+                    },
+                    {
+                        name: "humanizr.pascalcase",
+                        description: "PascalCasing"
+                    },
+                    {
+                        name: "humanizr.kebaberize",
+                        description: "kebab-like-string"
+                    },
+                    {
+                        name: "debug",
+                        description: "some more useful stuff"
+                    }
+
+                    ]
+            };
 
             window.addEventListener('resize', (event) => {
                 editor.layout();
@@ -67,7 +88,7 @@
                         monaco.editor.setModelLanguage(model, event.data.Language);
                     } else if (event.data.Type === "FontSize") {
                         editor.updateOptions({
-                            fontSize: event.data.Size
+                            fontSize:  event.data.Size
                         });
                     } else if (event.data.Type === "LineNumbers") {
                         editor.updateOptions({
@@ -81,9 +102,53 @@
                         editor.updateOptions({
                             renderWhitespace: event.data.WhitespaceType
                         });
+                    } else if (event.data.Type === "UpdateCompletions") {
+                        completions = event.data.Completions;
                     }
 
                 });
+
+
+            function ShowAutocompletion(obj) {
+
+                // Register object that will return autocomplete items 
+                monaco.languages.registerCompletionItemProvider('scriban', {
+                    // Run this function when the period or open parenthesis is typed (and anything after a space)
+                    triggerCharacters: ['.', '('],
+
+                    // Function to generate autocompletion results
+                    provideCompletionItems: function(model, position, token) {
+                        // Split everything the user has typed on the current line up at each space, and only look at the last word
+                        var last_chars = model.getValueInRange({ startLineNumber: position.lineNumber, startColumn: 0, endLineNumber: position.lineNumber, endColumn: position.column });
+                        var words = last_chars.replace("\t", "").split(" ");
+                        var active_typing = words[words.length - 1]; // What the user is currently typing (everything after the last space)
+
+
+                        // Array of autocompletion results
+                        var result = [];
+                        // Create completion object
+                        completions.helpers.forEach(function(item) {
+                            if (item.name.startsWith(active_typing)) {
+                                var to_push = {
+                                    label: item.name,
+                                    kind: monaco.languages.CompletionItemKind.Property,
+                                    detail: item.description,
+                                    insertText: item.name
+                                };
+                                // Add to final results
+                                result.push(to_push);
+                            }
+                        });
+                      
+                    return {
+                            suggestions: result
+                        };
+                    }
+                });
+            };
+
+            ShowAutocompletion();
+
             //forcing a layout here seems to help with the white flash slightly
             monaco.editor.setModelLanguage(model, "csharp");
             editor.layout();
