--- a/TextrudeInteractive/Resources/monaco.html
+++ b/TextrudeInteractive/Resources/monaco.html
@@ -106,7 +106,13 @@
                         // Array of autocompletion results
                         var result = [];
                         // Create completion object
-                        if (active_typing.length >=3)
+                        if (active_typing.length >= 3)
+                            var r = {
+                                startLineNumber: position.lineNumber,
+                                startColumn: position.column-active_typing.length,
+                                endLineNumber: position.lineNumber,
+                                endColumn: position.column
+                            };
                         completions.helpers.forEach(function(item) {
                             if (item.name.startsWith(active_typing)) {
                                 
@@ -114,7 +120,9 @@
                                     label: item.name,
                                     kind: item.kind,
                                     detail: item.description,
-                                    insertText: item.name.substr(active_typing.length)
+                                    insertText: item.name,
+                                    range:r
+
                                 };
                                 // Add to final results
                                 result.push(to_push);
