Provide basic snippet support for script editing

--- a/TextrudeInteractive/Resources/monaco.html
+++ b/TextrudeInteractive/Resources/monaco.html
@@ -120,7 +120,8 @@
                                     label: item.name,
                                     kind: item.kind,
                                     detail: item.description,
-                                    insertText: item.name,
+                                    documentation:item.description,
+                                    insertText: item.text,
                                     range:r
 
                                 };
